// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with empty message 1`] = `
<div>
  Viewing 
  0
   expenses totalling 
  $0.00
</div>
`;

exports[`should render ExpensesSummary with expenses 1`] = `
<div>
  Viewing 
  3
   expenses totalling 
  $1,141.95
</div>
`;
